<resources>
    <string name="app_name">My Shared Preferences</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">No Handphone</string>
    <string name="age">Age</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="save">Simpan</string>
    <string name="love_manchester_united">Suka manchester united?</string>
    <string name="change">Ubah</string>
    <string name="dummy_name">Reski Mulud Muchamad</string>
    <string name="dummy_email">reski.mulud@gmail.com</string>
    <string name="dummynumber">123456</string>
    <string name="dummyage">21</string>
    <string name="dummyislove">IsLoveMU</string>
</resources>